aks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project
  labels:
    istio.io/rev: asm-1-26
