aks/db_statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: project
spec:
  serviceName: mysql
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            # NEW: Mount init SQL folder
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d

      # NEW: Add the init script ConfigMap as a volume
      volumes:
        - name: mysql-init
          configMap:
            name: mysql-initdb   # this must match your ConfigMap name

  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
