aks/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
  namespace: project
  labels:
    app: frontend
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: blue
  template:
    metadata:
      labels:
        app: frontend
        version: blue
    spec:
      containers:
        - name: frontend
          image: sohummnm/frontend:337bbbb9eca3956d1d260def94131cda041963f2
          ports:
            - containerPort: 80
