aks/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  namespace: project
  labels:
    app: frontend
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: green
  template:
    metadata:
      labels:
        app: frontend
        version: green
    spec:
      containers:
        - name: frontend
          image: sohummnm/frontend:d068177edbfeffd5e75275403b723933b58ccb8b
          ports:
            - containerPort: 80
