aks/db_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: project
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
      name: mysql
