aks/istio_ingress_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-istio-ingressgateway-internal
  namespace: project
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
