aks/svc-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-blue
  namespace: project
spec:
  selector:
    app: frontend
    labels: blue
  ports:
    - port: 80
      targetPort: 80
