aks/svc-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-green
  namespace: project
spec:
  selector:
    app: frontend
    version: green
  ports:
    - port: 80
      targetPort: 80
