aks/agic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: aks-istio-ingress
spec:
  ingressClassName: azure/application-gateway
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aks-istio-ingressgateway-internal
                port:
                  number: 80
