aks/istio-blue-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-destination-blue
  namespace: project
spec:
  host: frontend-service-blue.project.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: blue
    labels:
      version: blue
