aks/istio-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend-destination
  namespace: project
spec:
  host: frontend
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
