aks/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-virtualservice
  namespace: project
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
    - match:
        - uri:
            prefix: /stateful
    - route:
      - destination:
          host: frontend-service-blue.project.svc.cluster.local
          subset: blue
        weight: 100
      - destination:
          host: frontend-service-green.project.svc.cluster.local
          subset: green
        weight: 0
